--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ header {
 }
 
 
-.slider-container {
+.sliderContainer {
   display: flex;
   gap: 20px;
   padding: 20px;
@@ -61,7 +61,7 @@ header {
   scrollbar-width: none;
 }
 
-.slider-container::-webkit-scrollbar {
+.sliderContainer::-webkit-scrollbar {
   display: none;
 }
 
@@ -98,4 +98,59 @@ header {
   font-weight: 800;
   font-size: 1.5rem;
   text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+}
+
+.btnDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.btn {
+    background-color: #E96B35;
+    border: none;
+    padding: 0.6rem 2rem 0.6rem 2rem;
+    border-radius: 2rem;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.137);
+}
+
+.btn > a {
+    color: white;
+    font-size: 0.8rem;
+}
+
+.products {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.product {
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    margin: auto;
+}
+
+.textProduct {
+    background-color: #F3F3F3;
+    width: 92%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.8rem;
+    border-radius: 0rem 0rem 0.6rem 0.6rem;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.137);
+}
+
+.footer {
+    background-color: #E96B35;
+    color: white;
+    font-size: 0.5rem;
+    display: flex;
+    padding: 0.5rem;
+    gap: 0.4rem;
+    align-items: center;
+    padding-bottom: 2rem;
 }
